# ti-omap3-sgx-wayland-wsegl

./: LICENSE  Makefile  Makefile.am  README  configure.ac  wayland-drm-client-protocol.h  wayland-drm-protocol.c  wayland-egl-priv.h  wayland-egl.c  wayland-wsegl.pro  waylandwsegl.c  waylandwsegl.pro
common/: common.mk  common.pri  log.c  log.h  server_wlegl.h
libegl/: Makefile.am  egl.c  egl.pc.in  libegl.pro  server_wlegl.cpp  server_wlegl_buffer.cpp  server_wlegl_buffer.h  wayland-sgx.xml
libwayland-egl/: Makefile.am  libwayland-egl.pro  wayland-egl-priv.h  wayland-egl.c  wayland-egl.pc.in  wsegl.h
protocol/: wayland-scanner.mk
rpm/: ti-omap3-sgx-wayland-wsegl.spec  ti-omap3-sgx-wayland-wsegl.yaml  wayland-wsegl.spec  wayland-wsegl.yaml
wsegl/: Makefile.am  wayland-egl-priv.h  wayland-egl.c  waylandwsegl.c  wsegl.pro
